RESOLVED FIXED69643
[FileSystem API] DirectoryEntry.getDirectory path argument is required
https://bugs.webkit.org/show_bug.cgi?id=69643
Summary [FileSystem API] DirectoryEntry.getDirectory path argument is required
Mark Pilgrim (Google)
Reported 2011-10-07 11:01:59 PDT
According to http://dev.w3.org/2009/dap/file-system/pub/FileSystem/#idl-def-DirectoryEntry , the first parameter (path) to the getDirectory() method is required. This test calls the method without the required parameter and logs the result. Expected behavior: throws TypeError: not enough arguments Actual behavior: no exception thrown
Attachments
Patch (2.55 KB, patch)
2011-10-07 11:02 PDT, Mark Pilgrim (Google)
no flags
Patch (5.74 KB, patch)
2011-12-01 11:33 PST, Mark Pilgrim (Google)
no flags
Mark Pilgrim (Google)
Comment 1 2011-10-07 11:02:35 PDT
Mark Pilgrim (Google)
Comment 2 2011-12-01 11:33:26 PST
Adam Barth
Comment 3 2011-12-01 11:52:26 PST
Comment on attachment 117450 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=117450&action=review > LayoutTests/fast/filesystem/resources/simple-required-arguments-getdirectory.js:4 > +if (this.importScripts) { > + importScripts('../resources/fs-worker-common.js'); > + importScripts('../resources/fs-test-util.js'); > +} Are we actually running this test in a worker?
WebKit Review Bot
Comment 4 2011-12-01 15:14:59 PST
Comment on attachment 117450 [details] Patch Clearing flags on attachment: 117450 Committed r101717: <http://trac.webkit.org/changeset/101717>
WebKit Review Bot
Comment 5 2011-12-01 15:15:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.