[FileSystem API] DirectoryEntry.getDirectory path argument is required https://bugs.webkit.org/show_bug.cgi?id=69643

Patch by Mark Pilgrim <pilgrim@chromium.org> on 2011-12-01
Reviewed by Adam Barth.

Source/WebCore:

Test: fast/filesystem/simple-required-arguments-getdirectory.html

* bindings/js/JSDirectoryEntryCustom.cpp:
(WebCore::JSDirectoryEntry::getDirectory): throw TypeError if not enough arguments
* bindings/v8/custom/V8DirectoryEntryCustom.cpp:
(WebCore::V8DirectoryEntry::getDirectoryCallback): throw TypeError if not enough arguments

LayoutTests:

* fast/filesystem/resources/simple-required-arguments-getdirectory.js: Added.
(errorCallback):
(successCallback):
* fast/filesystem/simple-required-arguments-getdirectory-expected.txt: Added.
* fast/filesystem/simple-required-arguments-getdirectory.html: Added.

Canonical link: https://commits.webkit.org/90188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101717 268f45cc-cd09-0410-ab3c-d52691b4dbfc