Source/WebCore/bindings/js/JSDirectoryEntryCustom.cpp
@@ -96,6 +96,9 @@ JSValue JSDirectoryEntry::getFile(ExecState* exec)
 
 JSValue JSDirectoryEntry::getDirectory(ExecState* exec)
 {
+    if (exec->argumentCount() < 1)
+        return throwError(exec, createTypeError(exec, "Not enough arguments"));
+
     DirectoryEntry* imp = static_cast<DirectoryEntry*>(impl());
     const String& path = valueToStringWithUndefinedOrNullCheck(exec, exec->argument(0));
     if (exec->hadException())
